--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+    compileSdkVersion 22
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "com.dudutech.weibo"
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -22,14 +22,15 @@ android {
 dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v13:21.0.0'
-    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:support-v13:22.0.0'
+    compile 'com.android.support:support-v4:22.0.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'com.marshalchen.ultimaterecyclerview:library:0.3.4'
 
 
 }
