--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.marshalchen.ultimaterecyclerview:library:0.3.4'
+    compile  'com.jakewharton:butterknife:6.1.0'
 
 
 }
