--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.marshalchen.ultimaterecyclerview:library:0.3.4'
     compile  'com.jakewharton:butterknife:6.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
 
 }
