--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,6 @@ dependencies {
     compile 'com.marshalchen.ultimaterecyclerview:library:0.3.4'
     compile  'com.jakewharton:butterknife:6.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.chrisbanes.photoview:library:1.2.4'
-
+    compile project(':libraries:photoview')
 
 }
