--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,31 +22,34 @@
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.Main"
-
-            >
+            android:theme="@style/AppTheme.Main" >
         </activity>
         <activity
             android:name=".ui.WebLoginActivity"
             android:windowSoftInputMode="adjustResize|stateHidden" >
         </activity>
-
-        <activity
-            android:name=".ui.picture.PicsActivity"
-             >
+        <activity android:name=".ui.picture.PicsActivity" >
         </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity
-            android:name=".ui.LoadingActivity">
+        <activity android:name=".ui.LoadingActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.timeline.UserHomeActivity"
+            android:label="@string/title_activity_user_home"
+            android:theme="@style/AppTheme.UserHome" >
+        </activity>
+        <activity
+            android:name=".ui.timeline.WeiboDetailActivity"
+            android:label="@string/title_activity_weibo_detail" >
         </activity>
     </application>
 
