--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,12 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Main" >
         </activity>
         <activity
-            android:name=".ui.WebLoginActivity"
+            android:name=".ui.login.WebLoginActivity"
             android:windowSoftInputMode="adjustResize|stateHidden" >
         </activity>
         <activity android:name=".ui.picture.PicsActivity" >
@@ -35,7 +35,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".ui.LoadingActivity" >
+        <activity android:name=".ui.login.LoadingActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,6 +50,12 @@
         <activity
             android:name=".ui.timeline.WeiboDetailActivity"
             android:label="@string/title_activity_weibo_detail" >
+        </activity>
+        <activity
+            android:name=".ui.post.NewPostActivity"
+            android:label="@string/title_activity_new_post"
+            android:windowSoftInputMode="adjustResize"
+            >
         </activity>
     </application>
 
