add comment and repost weibo feature
add comment and repost weibo feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,20 @@
             android:windowSoftInputMode="adjustResize"
             >
         </activity>
+
+        <activity
+            android:name=".ui.post.PostNewCommentActivity"
+            android:windowSoftInputMode="adjustResize"
+            >
+        </activity>
+
+        <activity
+            android:name=".ui.post.PostNewRepostActivity"
+            android:windowSoftInputMode="adjustResize"
+            >
+        </activity>
+
+
     </application>
 
 </manifest>
