--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,5 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
     compile project(':libraries:photoview')
-
+    compile project(':libraries:textdrawable')
 }
