--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile  'com.jakewharton:butterknife:6.1.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
     compile project(':libraries:photoview')
     compile project(':libraries:textdrawable')
 }
