--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,16 @@ android {
 
         release {
 
+            storeFile file("weibiu.keystore")
+            storePassword "biu123"
+            keyAlias "biu.keystore"
+            keyPassword "biu123"
         }
     }
     buildTypes {
         release {
             signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -52,4 +57,7 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
+    compile 'com.getbase:floatingactionbutton:1.10.0'
+
+
 }
