--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <application
         android:name=".global.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -29,7 +29,9 @@
             android:label="@string/black_magic_login"
             android:windowSoftInputMode="adjustResize|stateHidden" >
         </activity>
-        <activity android:name=".ui.picture.PicsActivity" >
+        <activity android:name=".ui.picture.PicsActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            >
         </activity>
 
         <meta-data
