add setting support

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ buildscript {
 allprojects {
     repositories {
         mavenCentral()
-//        jcenter()
+        jcenter()
+//        maven { url "https://raw.githubusercontent.com/umeng/mvn-repo-umeng/master/repository" }
 
     }
 }
