--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,8 +39,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <meta-data android:value="55bb13be67e58ea16c0013d1" android:name="UMENG_APPKEY"></meta-data>
-        <meta-data android:value="aphatest" android:name="UMENG_CHANNEL"/>
+
 
 
         <activity android:name=".ui.login.LoadingActivity" >
@@ -77,7 +76,7 @@
             android:label="@string/title_weibo_detail" >
         </activity>
         <activity
-            android:name=".ui.setting.SettingsActivity2"
+            android:name=".ui.setting.SettingsActivity"
             android:label="@string/title_activity_setting" >
         </activity>
     </application>
