--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.dudutech.weibo"
@@ -11,7 +11,31 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    signingConfigs {
+        debug {
 
+            storeFile file( "weibiu.keystore" )
+            storePassword "biu123"
+            keyAlias "biu.keystore"
+            keyPassword "biu123"
+        }
+
+        release {
+
+
+            storeFile file( "weibiu.keystore" )
+            storePassword "biu123"
+            keyAlias "biu.keystore"
+            keyPassword "biu123"
+        }
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs .debug
+            signingConfig signingConfigs .release
+            proguardFiles getDefaultProguardFile ( 'proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 
 }
 
